--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <!-- !!! IMPORTANT: Replace with the correct path to YOUR profile picture !!! -->
-                    <img src="images/your-profile-picture.jpg" alt="Basith AbuSyed">
+                    <img src="pic/abu.png" alt="Basith AbuSyed">
                 </div>
                 <div class="about-text">
                     <h3>I'm Basith AbuSyed</h3>
