Update index.html proj link

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                          <p class="project-tech"><strong>Tech:</strong> Python, Pandas, Scikit-learn, Matplotlib, Jupyter</p>
                          <div class="project-links">
                              <!-- !!! IMPORTANT: Update these links if available !!! -->
-                            <a href="#" target="_blank" class="btn btn-secondary">Live Demo</a>
-                            <a href="#" target="_blank" class="btn btn-secondary">GitHub</a>
+                            <a href="https://house-price-prediction-using-machine-learning-algorithms-9qccn.streamlit.app/" target="_blank" class="btn btn-secondary">Live Demo</a>
+                            <a href="https://github.com/abustark/HOUSE-PRICE-PREDICTION-USING-MACHINE-LEARNING-ALGORITHMS" target="_blank" class="btn btn-secondary">GitHub</a>
                             <!-- Or link to your PDF details -->
                             <!-- <a href="link-to-project-details.pdf" target="_blank" class="btn btn-secondary">Details PDF</a> -->
                         </div>
