--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <!-- Project 2: House Price Prediction -->
                 <div class="project-card">
                      <!-- !!! IMPORTANT: Replace with path to project screenshot !!! -->
-                     <img src="images/project-houseprice.jpg" alt="House Price Prediction Project" class="project-image">
+                     <img src="house.png" alt="House Price Prediction Project" class="project-image">
                     <div class="project-info">
                         <h3 class="project-title">House Price Prediction</h3>
                         <p class="project-description">Predicts house prices using Linear Regression and Random Forest models. Provides customizable predictions and data visualizations for trend analysis.</p>
