--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="Basith_Resume.pdf" target="_blank" class="nav-resume">Resume</a></li>
+                <li><a href="Basith_resume.pdf" target="_blank" class="nav-resume">Resume</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span></span>
