new proj tech clr

--- a/index.html
+++ b/index.html
@@ -214,7 +214,15 @@
                     <div class="project-info">
                         <h3 class="project-title">E-commerce Site for Digital Products</h3>
                         <p class="project-description">Developed a platform for buying/selling digital assets (courses, templates, UI kits) with secure payment gateways (Stripe/PayPal) and integrated admin and analytics modules.</p>
-                        <p class="project-tech"><strong>Tools Used:</strong> JavaScript, Node.js, PostgreSQL</p>
+
+
+                        <div class="project-tech">
+                    <span class="tech-tag js">JavaScript</span>
+                    <span class="tech-tag node">Node.js</span>
+                    <span class="tech-tag postgres">PostgreSQL</span>
+                </div>
+
+
                         <div class="project-links">
                             <!-- !!! IMPORTANT: Update these links if available !!! -->
                             <a href="#" target="_blank" class="btn btn-secondary">Live Demo</a>
@@ -232,7 +240,17 @@
                     <div class="project-info">
                         <h3 class="project-title">House Price Prediction</h3>
                         <p class="project-description">Implemented Linear Regression and Random Forest models to predict house prices, including data preprocessing, feature engineering, and visualizations for trend analysis.</p>
-                         <p class="project-tech"><strong>Tools Used:</strong> Python, Pandas, Scikit-learn, Matplotlib, Jupyter</p>
+
+
+                          <div class="project-tech">
+                    <span class="tech-tag python">Python</span>
+                    <span class="tech-tag pandas">Pandas</span>
+                    <span class="tech-tag sklearn">Scikit-learn</span>
+                    <span class="tech-tag matplotlib">Matplotlib</span>
+                    <span class="tech-tag jupyter">Jupyter</span>
+                 </div>
+
+
                          <div class="project-links">
                              <!-- !!! IMPORTANT: Update these links if available !!! -->
                             <a href="#" target="_blank" class="btn btn-secondary">Live Demo</a>
