--- a/index.html
+++ b/index.html
@@ -209,8 +209,21 @@
 
                 <!-- Project 1: E-commerce Site -->
                 <div class="project-card">
-                     <!-- !!! IMPORTANT: Replace with path to project screenshot !!! -->
-                    <img src="images/project-ecommerce.jpg" alt="E-commerce Site Project" class="project-image">
+                    
+
+                   <div class="project-image-wrapper">
+                <svg width="100%" height="100%">
+                    <defs>
+                        <linearGradient id="snake-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color: #3b82f6;" />
+                            <stop offset="100%" style="stop-color: #c770f0;" />
+                        </linearGradient>
+                    </defs>
+                    <image href="images/project-ecommerce.jpg" width="100%" height="100%" />
+                    <rect class="snake-border" x="1" y="1" width="calc(100% - 2px)" height="calc(100% - 2px)" rx="3" pathLength="1" />
+                </svg>
+            </div>
+
                     <div class="project-info">
                         <h3 class="project-title">E-commerce Site for Digital Products</h3>
                         <p class="project-description">Developed a platform for buying/selling digital assets (courses, templates, UI kits) with secure payment gateways (Stripe/PayPal) and integrated admin and analytics modules.</p>
@@ -235,8 +248,22 @@
 
                 <!-- Project 2: House Price Prediction -->
                 <div class="project-card">
-                     <!-- !!! IMPORTANT: Replace with path to project screenshot !!! -->
-                     <img src="images/project-houseprice.jpg" alt="House Price Prediction Project" class="project-image">
+                     
+
+                       <div class="project-image-wrapper">
+                <svg width="100%" height="100%">
+                    <!-- The 'defs' are only needed once, but it's safe to have them in both -->
+                    <defs>
+                        <linearGradient id="snake-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color: #3b82f6;" />
+                            <stop offset="100%" style="stop-color: #c770f0;" />
+                        </linearGradient>
+                    </defs>
+                    <image href="D:\portfolio\pic\house.png" width="100%" height="100%" />
+                    <rect class="snake-border" x="1" y="1" width="calc(100% - 2px)" height="calc(100% - 2px)" rx="3" pathLength="1" />
+                </svg>
+            </div>
+
                     <div class="project-info">
                         <h3 class="project-title">House Price Prediction</h3>
                         <p class="project-description">Implemented Linear Regression and Random Forest models to predict house prices, including data preprocessing, feature engineering, and visualizations for trend analysis.</p>
