--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <stop offset="100%" style="stop-color: #c770f0;" />
                         </linearGradient>
                     </defs>
-                    <image href="D:\portfolio\pic\house.png" width="100%" height="100%" />
+                    <image href="pic\house.png" width="100%" height="100%" />
                     <rect class="snake-border" x="1" y="1" width="calc(100% - 2px)" height="calc(100% - 2px)" rx="3" pathLength="1" />
                 </svg>
             </div>
